2008-02-07  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-app.c: Add missing include on twitux-account-dialog.h

	* src/twitux-ui-utils.h: Add missing twitux_window_get_is_visible function
	to header.

	* libtwitux/twitux-keyring.c (account_gnome_keyring_result_to_string):
	Add enumercation for GNOME_KEYRING_RESULT_NO_MATCH to quite compiler.

2008-02-05  Brian Pepple  <bpepple@fedoraproject.org>

	* configure.in:
	* src/twitux-network.c: Update to libsoup-2.4 api
	Patch from Dan Winship.

2008-02-04  Daniel Morales  <daniminas@gmail.com>

	* data/preferences_dialog.glade:
	* data/twitux.schemas.in:
	* src/twitux-parser.c:
	* src/twitux-preferences.c:
	* src/twitux.h: Add preference to show user names ore
	real names

2008-01-19  Daniel Morales  <daniminas@gmail.com>

	* src/twitux-network.c: add 'source' param to get 'from twitux'
	on twitter web.

2008-01-13  Brian Pepple  <bpepple@fedoraproject.org>

	* data/account_dialog.glade:
	* data/main_window.glade:
	* data/send_message_dialog.glade:
	* data/Makefile.am:
	* data/add_friend_dialog.glade:
	* data/spell_dialog.glade:
	* data/preferences_dialog.glade:
	* data/tray_menu.glade:
	* po/POTFILES.in:
	* src/twitux-account-dialog.c:
	* src/twitux-preferences.c:
	* src/twitux-send-message-dialog.c:
	* src/twitux-spell-dialog.c:
	* src/twitux-app.c:
	* src/twitux-add-dialog.c: split out glade files to make eventual gtkbuilder
	transition easier.

	* data/main.glade: removed file.

2007-12-30  Brian Pepple  <bpepple@fedoraproject.org>

	* configure.in:
	* NEWS: Bump version.

2007-12-30  Daniel Morales  <daniminas@gmail.com>

	* Release 0.60.
	
2007-12-17  Daniel Morales  <daniminas@gmail.com>

	* data/main.glade
	* src/twitux-app.[ch]:
	* src/twitux-tweet-list.c:
	* src/twitux-label.[ch]: Expand tweets in the libsexy label.
	* Close Bug #1781507: Wrong address for the FSF in license statements

2007-12-10  Daniel Morales  <daniminas@gmail.com>

	* data/main.glade:
	* src/twitux-send-direct-messages.[ch]: